--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,7 +1,7 @@
 Patients
 <ul>
-  {{#each patient in content}}
-    <li>{{patient.fullName}}</li>
+  {{#each content}}
+    <li>{{fullName}}</li>
   {{else}}
     Didn't find any patients.
   {{/each}}
